--- a/public/css/style.css
+++ b/public/css/style.css
@@ -155,6 +155,13 @@ label {
 .navbar-default {
 	background-color: #fff;
 	border-color: #fff;
+	position: fixed;
+	top: 0;
+    width: 100%;
+    margin: 0 auto;
+    left: 0;
+	z-index: 9999;
+	
 	
 }
 
@@ -345,6 +352,7 @@ label {
 		width: 100%;
 		background: #eee;
 		margin-top: 1em;
+		
 	}
 }
 
@@ -3494,7 +3502,7 @@ ul.social-icons3.two li a {
 		float: none;
 		width: auto;
 		margin-top: 0;
-		background-color: #e0e1e2;
+		background-color: #ecf0f5;
 		border: 0;
 	}
 	.multi-column-dropdown li a {
