--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,9 +8,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 html,
 body {
 	margin: 0;
-	font-size: 100%;
+	/* font-size: 100%; */
 	background: #fff;
-	font-family: 'Work Sans', sans-serif;
+	/* font-family: 'Work Sans', sans-serif; */
+	font-family: 'Roboto', sans-serif;
+	color: #999999;
+	font-size: 15px;
+    line-height: 25px;
+    font-weight: 400;
 }
 
 body a {
@@ -168,7 +173,7 @@ label {
 .navbar-brand {
 	float: left;
 	padding: 0!important;
-	font-size: 18px;
+	font-size: 16px;
 	line-height: 0px!important;
 	height: 0px!important;
 	text-transform: uppercase;
@@ -176,8 +181,9 @@ label {
 }
 
 .navbar-default a.navbar-brand h1 {
-	color: #282828;
+	color: #2196f3;
 	font-weight: bold;
+	margin-bottom: 5px;
 }
 
 .navbar-default .navbar-nav>li>a {
@@ -196,27 +202,27 @@ label {
 
 .navbar-default .navbar-nav>li>a:hover,
 .navbar-default .navbar-nav>li>a.active {
-	color: #000066;
+	color: #2196f3;
 }
 
 .navbar-default .navbar-nav>.open>a,
 .navbar-default .navbar-nav>.open>a:hover,
 .navbar-default .navbar-nav>.open>a:focus {
-	background-color: #000066;
+	background-color: #2196f3;
 	color: #fff;
 }
 
 .navbar-default .navbar-brand label {
-	color: #23B684;
+	color: #2196f3;
 	display: block;
 	font-size: 0.3em;
-	text-align: center;
+	text-align: right;
 	letter-spacing: 3px;
 }
 
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-	background-color: #000066;
+	background-color: #2196f3;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
@@ -239,7 +245,7 @@ label {
 	padding: 9px 10px;
 	margin-top: 8px;
 	margin-bottom: 8px;
-	background-color: #000066;
+	background-color: #2196f3;
 	background-image: none;
 	border: 1px solid transparent;
 	border-radius: 0;
@@ -276,7 +282,7 @@ label {
 .navbar-default .navbar-nav>.active>a,
 .navbar-default .navbar-nav>.active>a:hover,
 .navbar-default .navbar-nav>.active>a:focus {
-	color: #000066;
+	color: #2196f3;
 	background: none;
 }
 
@@ -286,7 +292,7 @@ label {
 }
 
 .navbar-default .navbar-toggle {
-	border-color: #202020;
+	border-color: #2196f3;
 }
 
 .dropdown-menu .divider {
@@ -946,7 +952,7 @@ h3.agile_heading.two {
 	width: 94%;
 	padding: 10px 15px;
 	border: none;
-	border-bottom: 1px solid #7d7d7d;
+	border-bottom: 1px solid #2196f3;
 	outline: none;
 	font-size: 14px;
 	letter-spacing: 1px;
@@ -992,11 +998,13 @@ h3.agile_heading.two {
 
 .login-form textarea {
 	/* resize: none; */
-	height: 212px;
-	padding: 20px 40px;
+	/* height: 212px;
+	padding: 20px 40px; */
 	margin-bottom: 0px;
 	background-color:white;
 	font-weight: bold;
+	border: 1px solid #2196f3;
+
 }
 
 
@@ -1100,14 +1108,14 @@ input[type="file"] {
 }
 
 h3.tittle.two {
-	color: #fff;
+	color: #2196f3;
 }
 
 
 /*-- //login --*/
 
 .candidate {
-	background: url(../images/banop.jpg) no-repeat 0px 0px;
+	/* background: url(../images/banop.jpg) no-repeat 0px 0px; */
 	background-size: cover;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -1115,6 +1123,7 @@ h3.tittle.two {
 	-moz-background-size: cover;
 	min-height: 632px;
 	padding: 5em 0 5em 0;
+
 }
 
 
@@ -1213,7 +1222,7 @@ h3.agileinfo_sign {
 }
 
 .signin-form h3 span {
-	color: #000066;
+	color: #2196f3;
 }
 
 .signin-form img {
@@ -1231,7 +1240,7 @@ h3.agileinfo_sign {
 	outline: none;
 	color: #212121;
 	border: none;
-	border: 1px solid #ccc;
+	border: 1px solid #2196f3;
 	letter-spacing: 1px;
 	text-align: left;
 }
@@ -1274,7 +1283,7 @@ h3.agileinfo_sign {
 	color: #FFFFFF;
 	text-transform: uppercase;
 	cursor: pointer;
-	background: #000066;
+	background: #2196f3;
 	box-shadow: 0px 2px 1px rgba(28, 28, 29, 0.42);
 }
 
@@ -1397,7 +1406,8 @@ p.reg {
 
 .inner_page_agile {
 	text-align: center;
-	background: url(../images/inner1.jpg) no-repeat 0px 0px;
+	/* background: url(../images/inner1.jpg) no-repeat 0px 0px; */
+	background-color: #2196f3;
 	background-size: cover;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -1414,6 +1424,7 @@ p.reg {
 	font-size: 2.5em;
 	text-shadow: 0 1px 2px rgba(0, 0, 0, 0.29);
 	letter-spacing: 1px;
+	margin-top:30px;
 }
 
 .inner_page_agile p {
@@ -1449,7 +1460,7 @@ ul.short_w3ls li {
 }
 
 ul.short_w3ls li a {
-	color: #000066;
+	color: #2196f3;
 	text-decoration: none;
 }
 
@@ -3173,7 +3184,7 @@ ul.tag2:last-child {
 .footer_grid_right input[type="submit"] {
 	outline: none;
 	padding: 12px 0;
-	background: #000066;
+	background: #2196f3;
 	font-size: 1em;
 	color: #fff;
 	width: 20%;
@@ -3183,7 +3194,7 @@ ul.tag2:last-child {
 }
 
 .footer_grid_right input[type="submit"]:hover {
-	background: #000066;
+	background: #2196f3;
 }
 
 ul.social-icons3.two li a {
@@ -3833,7 +3844,7 @@ ul.social-icons3.two li a {
 		padding: 3em 0 3em 0;
 	}
 	.login-form textarea {
-		height: 81px;
+		
 	}
 	.login-form input[type="submit"] {
 		padding: 10px 0;
